[gd_scene load_steps=29 format=3 uid="uid://br5uk4txmdwx3"]

[ext_resource type="Script" path="res://Scripts/deer.gd" id="1_3h6h4"]
[ext_resource type="Texture2D" uid="uid://ceuextb3pu87c" path="res://Assets/Sprites/Deer/deerSpriteSheet.png" id="2_hr7xn"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://df2mru68kyxyj" path="res://Assets/anim/new_animation_node_state_machine.tres" id="3_w1hln"]
[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="4_6x3ip"]
[ext_resource type="Script" path="res://Scripts/Wonder.gd" id="5_2rqme"]
[ext_resource type="Script" path="res://Scripts/Rest.gd" id="6_a5onu"]
[ext_resource type="Script" path="res://Scripts/InfoTab.gd" id="6_kske8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_feam2"]
radius = 4.0
height = 14.0

[sub_resource type="Animation" id="Animation_863ip"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b0sqh"]
resource_name = "eat_northe"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_37uvr"]
resource_name = "eat_north2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [25, 26, 27]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d5gg0"]
resource_name = "eat_southe"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [22, 23, 24]
}

[sub_resource type="Animation" id="Animation_2d0xu"]
resource_name = "eat_southw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [22, 23, 24]
}

[sub_resource type="Animation" id="Animation_h55lm"]
resource_name = "idle_south"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3gmsy"]
resource_name = "idle_northw"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rad5v"]
resource_name = "idle_southe"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_aq2t5"]
resource_name = "idle_southw"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_2n2hx"]
resource_name = "walk_northe"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_fco7h"]
resource_name = "walk_northw"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_b5a4b"]
resource_name = "walk_southe"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_ql0f5"]
resource_name = "walk_southw"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("body:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31n8l"]
_data = {
"RESET": SubResource("Animation_863ip"),
"eat_northe": SubResource("Animation_b0sqh"),
"eat_northw": SubResource("Animation_37uvr"),
"eat_southe": SubResource("Animation_d5gg0"),
"eat_southw": SubResource("Animation_2d0xu"),
"idle_northe": SubResource("Animation_h55lm"),
"idle_northw": SubResource("Animation_3gmsy"),
"idle_southe": SubResource("Animation_rad5v"),
"idle_southw": SubResource("Animation_aq2t5"),
"walk_northe": SubResource("Animation_2n2hx"),
"walk_northw": SubResource("Animation_fco7h"),
"walk_southe": SubResource("Animation_b5a4b"),
"walk_southw": SubResource("Animation_ql0f5")
}

[sub_resource type="LabelSettings" id="LabelSettings_twsth"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_xve48"]
font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4ctb"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wx7kh"]
bg_color = Color(0.831373, 0.74902, 0.305882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ejcq"]
bg_color = Color(0.196078, 0.713726, 0.243137, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_bj5yg"]
radius = 43.0116

[node name="deer" type="CharacterBody2D"]
script = ExtResource("1_3h6h4")

[node name="body" type="Sprite2D" parent="."]
y_sort_enabled = true
texture = ExtResource("2_hr7xn")
flip_h = true
hframes = 28

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_feam2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_31n8l")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_31n8l")
}
tree_root = ExtResource("3_w1hln")
anim_player = NodePath("../AnimationPlayer")
parameters/Eat/blend_position = Vector2(0.720768, 0.938326)
parameters/Idle/blend_position = Vector2(-0.806763, -0.356828)
parameters/Walk/blend_position = Vector2(-0.570048, 0.312775)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("4_6x3ip")
initial_state = NodePath("Wonder")

[node name="Wonder" type="Node" parent="StateMachine" node_paths=PackedStringArray("wanderer_entity")]
script = ExtResource("5_2rqme")
wanderer_entity = NodePath("../..")
move_speed = 100.0

[node name="Rest" type="Node" parent="StateMachine" node_paths=PackedStringArray("resting_entity")]
script = ExtResource("6_a5onu")
resting_entity = NodePath("../..")

[node name="Control" type="Control" parent="." node_paths=PackedStringArray("entity", "state_machine")]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = -25.0
offset_top = -43.0
offset_right = 475.0
offset_bottom = 227.0
scale = Vector2(0.1, 0.1)
script = ExtResource("6_kske8")
entity = NodePath("..")
state_machine = NodePath("../StateMachine")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Info tab"
label_settings = SubResource("LabelSettings_twsth")

[node name="StateLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "state: "
label_settings = SubResource("LabelSettings_xve48")

[node name="StaminaLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Stamina"
label_settings = SubResource("LabelSettings_xve48")

[node name="StaminaBar" type="ProgressBar" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_r4ctb")
theme_override_styles/fill = SubResource("StyleBoxFlat_wx7kh")
max_value = 3.0
step = 1.0
value = 1.0
show_percentage = false

[node name="HungerLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Hunger"
label_settings = SubResource("LabelSettings_xve48")

[node name="HungerBar" type="ProgressBar" parent="Control/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/background = SubResource("StyleBoxFlat_r4ctb")
theme_override_styles/fill = SubResource("StyleBoxFlat_8ejcq")
max_value = 3.0
step = 1.0
value = 3.0
show_percentage = false

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_bj5yg")

[connection signal="area_entered" from="DetectionRange" to="." method="_on_detection_range_area_entered"]
